--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "Stock Share Price Scrapping",
   "main": "server.js",
   "author": "rlacey2",
+  "engines": {
+    "node": "^8.9.1"
+  },
+  "scripts": {
+    "start": "node server.js",
+ 
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },  
+  
+  
   "repository": {
     "type": "git",
     "url": ""
