--- a/package.json
+++ b/package.json
@@ -19,11 +19,23 @@
     "url": ""
   },
   "dependencies": {
+     "angular-cookie-law": "^0.2.4",
     "axios": "^0.17.1",
-    "cheerio": "latest",
+    "cfenv": "^1.0.3",
+    "cheerio": "latest",	
+    "childprocess": "^2.0.1",
+    "compression": "^1.7.1",	
     "express": "latest",
+    "helmet": "^2.1.2",   	
     "node-crontab": "^0.0.8",
     "q": "^1.5.1",
-    "request": "latest"
+    "request": "latest",
+	"toobusy-js": "^0.5.1",
+	"yarn": "^1.3.2"
   }
 }
+
+ 
+
+    
+    
